Fix broken layout in newer item page

--- a/Amazon.co.jp_tweak.user.css
+++ b/Amazon.co.jp_tweak.user.css
@@ -21,8 +21,8 @@
   .a-alert-container { background-color: #feb !important; }
 
   /* 〇〇日にお届けするには今から〇〇時間以内にお急ぎ便 */
-  #ddmShippingMessage { padding: 0.7em 1.2em 1em !important; background: #efe !important; }
-  #ddmShippingMessage b, #ddmFastestCountdown { font: bold 170% sans-serif !important; }
+  #ddmShippingMessage { text-align: left !important; padding: 0.7em 1.2em 1em !important; background: #efe !important; }
+  #ddmShippingMessage b, #ddmFastestCountdown { font: bold 170% sans-serif !important; white-space: nowrap !important; }
 
   /* Amazonプライム会員資格は〇〇に終了します */
   .prime-alert-warning {
